Adds sign-in form

--- a/index.html
+++ b/index.html
@@ -9,10 +9,24 @@
       <h1>1984</h1>
     </header>
     <main role="main">
-      
+      <form action="#" id="login-form" method="post" accept-charset="UTF-8">
+        <fieldset>
+          <legend>Please Sign in</legend>
+          <div>
+            <label for="user-email">Email</label>
+            <input type="text" id="user-email" name="user[email]" placeholder="Email Address">
+          </div>
+          <div>
+            <label for="user-password"></label>
+            <input type="password" id="user-password" name="user[password]" placeholder="Password">
+          </div>
+          <div>
+            <input type="submit" value="Sign In">
+          </div>
+        </fieldset>
+      </form>
     </main>
     <footer>
-      
     </footer>
   </body>
 </html>
