--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       </form>
     </main>
     <footer>
+    <p>
+      <a href="/privacy">Privacy Policy</a> &bull;
+      <a href="/terms">Terms of Use</a> &bull;
+      &copy; 1984
+    </p>
     </footer>
   </body>
 </html>
