--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
       <form action="#" id="login-form" method="post" accept-charset="UTF-8">
         <fieldset>
           <legend>Please Sign in</legend>
-          <div>
+          <div class="form-group">
             <label for="user-email">Email</label>
             <input type="text" id="user-email" name="user[email]" placeholder="Email Address">
           </div>
-          <div>
-            <label for="user-password"></label>
+          <div class="form-group">
+            <label for="user-password">Password</label>
             <input type="password" id="user-password" name="user[password]" placeholder="Password">
           </div>
-          <div>
+          <div class="form-group">
             <input type="submit" value="Sign In">
           </div>
         </fieldset>
