Adds sr-only on form labels

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <fieldset>
           <legend>Please Sign in</legend>
           <div class="form-group">
-            <label for="user-email">Email</label>
+            <label for="user-email" class="sr-only">Email</label>
             <input type="text" id="user-email" name="user[email]" placeholder="Email Address">
           </div>
           <div class="form-group">
-            <label for="user-password">Password</label>
+            <label for="user-password" class="sr-only">Password</label>
             <input type="password" id="user-password" name="user[password]" placeholder="Password">
           </div>
           <div class="form-group">
-            <input type="submit" value="Sign In">
+            <input type="submit" value="Sign In" class="btn btn-success">
           </div>
         </fieldset>
       </form>
